Upload fixtures data to Supabase

--- a/fpl_fixtures/fpl_fixtures.ipynb
+++ b/fpl_fixtures/fpl_fixtures.ipynb
@@ -10,14 +10,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Standard libraries\n",
     "import requests\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sqlalchemy import create_engine\n",
+    "import psycopg2\n",
+    "\n",
+    "# for env variables\n",
+    "import os\n",
+    "from dotenv import load_dotenv, get_key\n",
+    "load_dotenv()\n",
+    "\n",
+    "# save env variables\n",
+    "SUPABASE_USER = get_key('.env', 'SUPABASE_USER')\n",
+    "SUPABASE_HOST = get_key('.env', 'SUPABASE_HOST')\n",
+    "SUPABASE_PASSWORD = get_key('.env', 'SUPABASE_PASSWORD')\n",
+    "SUPABASE_PORT = get_key('.env', 'SUPABASE_PORT')\n",
+    "SUPABASE_DB = get_key('.env', 'SUPABASE_DB')"
    ]
   },
   {
@@ -29,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +221,7 @@
        "4                  4                  2     74911  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +444,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +667,7 @@
        "8  Nott'm Forest  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +722,6 @@
        "      <th>team_a_score</th>\n",
        "      <th>team_h</th>\n",
        "      <th>team_h_score</th>\n",
-       "      <th>stats</th>\n",
        "      <th>team_h_difficulty</th>\n",
        "      <th>team_a_difficulty</th>\n",
        "      <th>home_team</th>\n",
@@ -726,7 +739,6 @@
        "      <td>NaN</td>\n",
        "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>Brighton</td>\n",
@@ -742,7 +754,6 @@
        "      <td>NaN</td>\n",
        "      <td>12</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
        "      <td>Liverpool</td>\n",
@@ -758,7 +769,6 @@
        "      <td>NaN</td>\n",
        "      <td>13</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>Man City</td>\n",
@@ -774,7 +784,6 @@
        "      <td>NaN</td>\n",
        "      <td>15</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>Newcastle</td>\n",
@@ -790,7 +799,6 @@
        "      <td>2.0</td>\n",
        "      <td>7</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>[{'identifier': 'goals_scored', 'a': [{'value'...</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>Crystal Palace</td>\n",
@@ -808,29 +816,29 @@
        "3  248    NaN     False                  None       5           NaN      15   \n",
        "4    1    1.0      True  2022-08-05T19:00:00Z       1           2.0       7   \n",
        "\n",
-       "   team_h_score                                              stats  \\\n",
-       "0           NaN                                                 []   \n",
-       "1           NaN                                                 []   \n",
-       "2           NaN                                                 []   \n",
-       "3           NaN                                                 []   \n",
-       "4           0.0  [{'identifier': 'goals_scored', 'a': [{'value'...   \n",
+       "   team_h_score  team_h_difficulty  team_a_difficulty       home_team  \\\n",
+       "0           NaN                  3                  3        Brighton   \n",
+       "1           NaN                  2                  4       Liverpool   \n",
+       "2           NaN                  2                  5        Man City   \n",
+       "3           NaN                  3                  4       Newcastle   \n",
+       "4           0.0                  4                  2  Crystal Palace   \n",
        "\n",
-       "   team_h_difficulty  team_a_difficulty       home_team away_team  \n",
-       "0                  3                  3        Brighton   Man Utd  \n",
-       "1                  2                  4       Liverpool    Fulham  \n",
-       "2                  2                  5        Man City  West Ham  \n",
-       "3                  3                  4       Newcastle  Brighton  \n",
-       "4                  4                  2  Crystal Palace   Arsenal  "
+       "  away_team  \n",
+       "0   Man Utd  \n",
+       "1    Fulham  \n",
+       "2  West Ham  \n",
+       "3  Brighton  \n",
+       "4   Arsenal  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# removing unnecessary columns\n",
-    "fixtures_df = fixtures_df[['id', 'event', 'finished', 'kickoff_time', 'team_a', 'team_a_score', 'team_h', 'team_h_score', 'stats',\n",
+    "fixtures_df = fixtures_df[['id', 'event', 'finished', 'kickoff_time', 'team_a', 'team_a_score', 'team_h', 'team_h_score',\n",
     "                           'team_h_difficulty', 'team_a_difficulty', 'home_team', 'away_team']]\n",
     "\n",
     "fixtures_df.head()"
@@ -838,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +878,6 @@
        "      <th>team_a_score</th>\n",
        "      <th>home_team_id</th>\n",
        "      <th>team_h_score</th>\n",
-       "      <th>stats</th>\n",
        "      <th>team_h_difficulty</th>\n",
        "      <th>team_a_difficulty</th>\n",
        "      <th>home_team</th>\n",
@@ -888,7 +895,6 @@
        "      <td>NaN</td>\n",
        "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>Brighton</td>\n",
@@ -904,7 +910,6 @@
        "      <td>NaN</td>\n",
        "      <td>12</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
        "      <td>Liverpool</td>\n",
@@ -920,7 +925,6 @@
        "      <td>NaN</td>\n",
        "      <td>13</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>Man City</td>\n",
@@ -936,7 +940,6 @@
        "      <td>NaN</td>\n",
        "      <td>15</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>Newcastle</td>\n",
@@ -952,7 +955,6 @@
        "      <td>2.0</td>\n",
        "      <td>7</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>[{'identifier': 'goals_scored', 'a': [{'value'...</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>Crystal Palace</td>\n",
@@ -970,19 +972,12 @@
        "3       248       NaN     False                  None             5   \n",
        "4         1       1.0      True  2022-08-05T19:00:00Z             1   \n",
        "\n",
-       "   team_a_score  home_team_id  team_h_score  \\\n",
-       "0           NaN             5           NaN   \n",
-       "1           NaN            12           NaN   \n",
-       "2           NaN            13           NaN   \n",
-       "3           NaN            15           NaN   \n",
-       "4           2.0             7           0.0   \n",
-       "\n",
-       "                                               stats  team_h_difficulty  \\\n",
-       "0                                                 []                  3   \n",
-       "1                                                 []                  2   \n",
-       "2                                                 []                  2   \n",
-       "3                                                 []                  3   \n",
-       "4  [{'identifier': 'goals_scored', 'a': [{'value'...                  4   \n",
+       "   team_a_score  home_team_id  team_h_score  team_h_difficulty  \\\n",
+       "0           NaN             5           NaN                  3   \n",
+       "1           NaN            12           NaN                  2   \n",
+       "2           NaN            13           NaN                  2   \n",
+       "3           NaN            15           NaN                  3   \n",
+       "4           2.0             7           0.0                  4   \n",
        "\n",
        "   team_a_difficulty       home_team away_team  \n",
        "0                  3        Brighton   Man Utd  \n",
@@ -992,7 +987,7 @@
        "4                  2  Crystal Palace   Arsenal  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,6 +995,81 @@
    "source": [
     "fixtures_df = fixtures_df.rename(columns={'id': 'match_id', 'event': 'gameweek', 'team_a': 'away_team_id', 'team_h': 'home_team_id'})\n",
     "fixtures_df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load into Supabase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# establish connection\n",
+    "conn = psycopg2.connect(\n",
+    "    database=SUPABASE_DB, \n",
+    "    user=SUPABASE_USER, \n",
+    "    password=SUPABASE_PASSWORD, \n",
+    "    host=SUPABASE_HOST, \n",
+    "    port=SUPABASE_PORT\n",
+    ")\n",
+    "\n",
+    "# Setting auto commit true\n",
+    "conn.autocommit = True\n",
+    "\n",
+    "# Creating a cursor object using the cursor() method\n",
+    "cursor = conn.cursor()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop the table before creating it again\n",
+    "drop_query = 'DROP TABLE IF EXISTS raw_fpl.dim_fpl_fixtures;'\n",
+    "cursor.execute(drop_query)\n",
+    "\n",
+    "# close the cursor and connection\n",
+    "cursor.close()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "380"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create SQL alchemy engine\n",
+    "engine_url = 'postgresql://' + SUPABASE_USER + ':' + SUPABASE_PASSWORD + '@' + SUPABASE_HOST + '/' + SUPABASE_DB\n",
+    "engine = create_engine(engine_url)\n",
+    "\n",
+    "# Load the table in supabase\n",
+    "fixtures_df.to_sql(\n",
+    "    'dim_fpl_fixtures',\n",
+    "    engine,\n",
+    "    schema='raw_fpl',\n",
+    "    index=False\n",
+    ")"
    ]
   },
   {
