added percentile fields for main metrics

--- a/squad_optimization/squad_optimizer.ipynb
+++ b/squad_optimization/squad_optimizer.ipynb
@@ -198,6 +198,392 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>second_name</th>\n",
+       "      <th>name</th>\n",
+       "      <th>team_name</th>\n",
+       "      <th>position</th>\n",
+       "      <th>news</th>\n",
+       "      <th>selected_by_percent</th>\n",
+       "      <th>in_dreamteam</th>\n",
+       "      <th>now_cost</th>\n",
+       "      <th>...</th>\n",
+       "      <th>points_per_million</th>\n",
+       "      <th>total_points_percentile</th>\n",
+       "      <th>bonus_percentile</th>\n",
+       "      <th>form_percentile</th>\n",
+       "      <th>ict_index_percentile</th>\n",
+       "      <th>points_per_game_percentile</th>\n",
+       "      <th>points_per_million_percentile</th>\n",
+       "      <th>goals_scored_percentile</th>\n",
+       "      <th>assists_percentile</th>\n",
+       "      <th>clean_sheets_percentile</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>405</th>\n",
+       "      <td>308</td>\n",
+       "      <td>Mohamed</td>\n",
+       "      <td>Salah</td>\n",
+       "      <td>Salah</td>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td>International Duty - Unknown return date</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>131</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.908397</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.972222</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.921053</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.997076</td>\n",
+       "      <td>0.983918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>698</th>\n",
+       "      <td>516</td>\n",
+       "      <td>Son</td>\n",
+       "      <td>Heung-min</td>\n",
+       "      <td>Son</td>\n",
+       "      <td>Spurs</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td>International Duty - Unknown return date</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>97</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14.020619</td>\n",
+       "      <td>0.997076</td>\n",
+       "      <td>0.995614</td>\n",
+       "      <td>0.942982</td>\n",
+       "      <td>0.994152</td>\n",
+       "      <td>0.994152</td>\n",
+       "      <td>0.973684</td>\n",
+       "      <td>0.997076</td>\n",
+       "      <td>0.947368</td>\n",
+       "      <td>0.956140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>60</td>\n",
+       "      <td>Ollie</td>\n",
+       "      <td>Watkins</td>\n",
+       "      <td>Watkins</td>\n",
+       "      <td>Aston Villa</td>\n",
+       "      <td>Forward</td>\n",
+       "      <td></td>\n",
+       "      <td>55.6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>89</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.595506</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.985294</td>\n",
+       "      <td>0.872549</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.980392</td>\n",
+       "      <td>0.950980</td>\n",
+       "      <td>0.970588</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.916667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>718</th>\n",
+       "      <td>526</td>\n",
+       "      <td>Jarrod</td>\n",
+       "      <td>Bowen</td>\n",
+       "      <td>Bowen</td>\n",
+       "      <td>West Ham</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td></td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>True</td>\n",
+       "      <td>81</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.950617</td>\n",
+       "      <td>0.994152</td>\n",
+       "      <td>0.942982</td>\n",
+       "      <td>0.884503</td>\n",
+       "      <td>0.976608</td>\n",
+       "      <td>0.979532</td>\n",
+       "      <td>0.970760</td>\n",
+       "      <td>0.994152</td>\n",
+       "      <td>0.815789</td>\n",
+       "      <td>0.906433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>481</th>\n",
+       "      <td>355</td>\n",
+       "      <td>Erling</td>\n",
+       "      <td>Haaland</td>\n",
+       "      <td>Haaland</td>\n",
+       "      <td>Man City</td>\n",
+       "      <td>Forward</td>\n",
+       "      <td>Foot injury - 50% chance of playing</td>\n",
+       "      <td>51.6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>139</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.057554</td>\n",
+       "      <td>0.990196</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.289216</td>\n",
+       "      <td>0.980392</td>\n",
+       "      <td>0.990196</td>\n",
+       "      <td>0.774510</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.965686</td>\n",
+       "      <td>0.852941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Bukayo</td>\n",
+       "      <td>Saka</td>\n",
+       "      <td>Saka</td>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td></td>\n",
+       "      <td>62.1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>91</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12.087912</td>\n",
+       "      <td>0.991228</td>\n",
+       "      <td>0.970760</td>\n",
+       "      <td>0.909357</td>\n",
+       "      <td>0.997076</td>\n",
+       "      <td>0.970760</td>\n",
+       "      <td>0.935673</td>\n",
+       "      <td>0.966374</td>\n",
+       "      <td>0.997076</td>\n",
+       "      <td>0.983918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>551</th>\n",
+       "      <td>412</td>\n",
+       "      <td>Anthony</td>\n",
+       "      <td>Gordon</td>\n",
+       "      <td>Gordon</td>\n",
+       "      <td>Newcastle</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td></td>\n",
+       "      <td>19.8</td>\n",
+       "      <td>True</td>\n",
+       "      <td>61</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.049180</td>\n",
+       "      <td>0.988304</td>\n",
+       "      <td>0.942982</td>\n",
+       "      <td>0.929825</td>\n",
+       "      <td>0.964912</td>\n",
+       "      <td>0.966374</td>\n",
+       "      <td>0.991228</td>\n",
+       "      <td>0.980994</td>\n",
+       "      <td>0.988304</td>\n",
+       "      <td>0.998538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>362</td>\n",
+       "      <td>Cole</td>\n",
+       "      <td>Palmer</td>\n",
+       "      <td>Palmer</td>\n",
+       "      <td>Chelsea</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td></td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>58</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.586207</td>\n",
+       "      <td>0.985380</td>\n",
+       "      <td>0.985380</td>\n",
+       "      <td>0.997076</td>\n",
+       "      <td>0.970760</td>\n",
+       "      <td>0.979532</td>\n",
+       "      <td>0.997076</td>\n",
+       "      <td>0.988304</td>\n",
+       "      <td>0.947368</td>\n",
+       "      <td>0.776316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>758</th>\n",
+       "      <td>557</td>\n",
+       "      <td>Hwang</td>\n",
+       "      <td>Hee-chan</td>\n",
+       "      <td>Hee Chan</td>\n",
+       "      <td>Wolves</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td>International Duty - Unknown return date</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>56</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.857143</td>\n",
+       "      <td>0.982456</td>\n",
+       "      <td>0.961988</td>\n",
+       "      <td>0.978070</td>\n",
+       "      <td>0.932749</td>\n",
+       "      <td>0.959064</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.991228</td>\n",
+       "      <td>0.875731</td>\n",
+       "      <td>0.707602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>85</td>\n",
+       "      <td>Dominic</td>\n",
+       "      <td>Solanke</td>\n",
+       "      <td>Solanke</td>\n",
+       "      <td>Bournemouth</td>\n",
+       "      <td>Forward</td>\n",
+       "      <td></td>\n",
+       "      <td>27.4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>71</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14.084507</td>\n",
+       "      <td>0.980392</td>\n",
+       "      <td>0.955882</td>\n",
+       "      <td>0.848039</td>\n",
+       "      <td>0.970588</td>\n",
+       "      <td>0.960784</td>\n",
+       "      <td>0.970588</td>\n",
+       "      <td>0.990196</td>\n",
+       "      <td>0.725490</td>\n",
+       "      <td>0.916667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 43 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id first_name second_name      name    team_name    position  \\\n",
+       "405  308    Mohamed       Salah     Salah    Liverpool  Midfielder   \n",
+       "698  516        Son   Heung-min       Son        Spurs  Midfielder   \n",
+       "62    60      Ollie     Watkins   Watkins  Aston Villa     Forward   \n",
+       "718  526     Jarrod       Bowen     Bowen     West Ham  Midfielder   \n",
+       "481  355     Erling     Haaland   Haaland     Man City     Forward   \n",
+       "17    19     Bukayo        Saka      Saka      Arsenal  Midfielder   \n",
+       "551  412    Anthony      Gordon    Gordon    Newcastle  Midfielder   \n",
+       "266  362       Cole      Palmer    Palmer      Chelsea  Midfielder   \n",
+       "758  557      Hwang    Hee-chan  Hee Chan       Wolves  Midfielder   \n",
+       "97    85    Dominic     Solanke   Solanke  Bournemouth     Forward   \n",
+       "\n",
+       "                                         news  selected_by_percent  \\\n",
+       "405  International Duty - Unknown return date                 26.2   \n",
+       "698  International Duty - Unknown return date                 19.6   \n",
+       "62                                                            55.6   \n",
+       "718                                                           26.9   \n",
+       "481       Foot injury - 50% chance of playing                 51.6   \n",
+       "17                                                            62.1   \n",
+       "551                                                           19.8   \n",
+       "266                                                           37.2   \n",
+       "758  International Duty - Unknown return date                  4.9   \n",
+       "97                                                            27.4   \n",
+       "\n",
+       "     in_dreamteam  now_cost  ...  points_per_million  total_points_percentile  \\\n",
+       "405          True       131  ...           11.908397                 1.000000   \n",
+       "698          True        97  ...           14.020619                 0.997076   \n",
+       "62           True        89  ...           13.595506                 1.000000   \n",
+       "718          True        81  ...           13.950617                 0.994152   \n",
+       "481          True       139  ...            8.057554                 0.990196   \n",
+       "17           True        91  ...           12.087912                 0.991228   \n",
+       "551          True        61  ...           17.049180                 0.988304   \n",
+       "266         False        58  ...           17.586207                 0.985380   \n",
+       "758         False        56  ...           17.857143                 0.982456   \n",
+       "97          False        71  ...           14.084507                 0.980392   \n",
+       "\n",
+       "     bonus_percentile  form_percentile  ict_index_percentile  \\\n",
+       "405          1.000000         0.972222              1.000000   \n",
+       "698          0.995614         0.942982              0.994152   \n",
+       "62           0.985294         0.872549              1.000000   \n",
+       "718          0.942982         0.884503              0.976608   \n",
+       "481          1.000000         0.289216              0.980392   \n",
+       "17           0.970760         0.909357              0.997076   \n",
+       "551          0.942982         0.929825              0.964912   \n",
+       "266          0.985380         0.997076              0.970760   \n",
+       "758          0.961988         0.978070              0.932749   \n",
+       "97           0.955882         0.848039              0.970588   \n",
+       "\n",
+       "     points_per_game_percentile  points_per_million_percentile  \\\n",
+       "405                    1.000000                       0.921053   \n",
+       "698                    0.994152                       0.973684   \n",
+       "62                     0.980392                       0.950980   \n",
+       "718                    0.979532                       0.970760   \n",
+       "481                    0.990196                       0.774510   \n",
+       "17                     0.970760                       0.935673   \n",
+       "551                    0.966374                       0.991228   \n",
+       "266                    0.979532                       0.997076   \n",
+       "758                    0.959064                       1.000000   \n",
+       "97                     0.960784                       0.970588   \n",
+       "\n",
+       "     goals_scored_percentile  assists_percentile  clean_sheets_percentile  \n",
+       "405                 1.000000            0.997076                 0.983918  \n",
+       "698                 0.997076            0.947368                 0.956140  \n",
+       "62                  0.970588            1.000000                 0.916667  \n",
+       "718                 0.994152            0.815789                 0.906433  \n",
+       "481                 1.000000            0.965686                 0.852941  \n",
+       "17                  0.966374            0.997076                 0.983918  \n",
+       "551                 0.980994            0.988304                 0.998538  \n",
+       "266                 0.988304            0.947368                 0.776316  \n",
+       "758                 0.991228            0.875731                 0.707602  \n",
+       "97                  0.990196            0.725490                 0.916667  \n",
+       "\n",
+       "[10 rows x 43 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create percentile columns for specific metrics\n",
+    "percentile_metrics = ['bonus', 'form', 'ict_index', 'points_per_game', 'points_per_million', 'total_points', 'goals_scored', 'assists', 'clean_sheets']\n",
+    "\n",
+    "for metric in percentile_metrics:\n",
+    "    slim_elements_df[metric + '_percentile'] = slim_elements_df.groupby('position')[metric].rank(pct=True)\n",
+    "\n",
+    "slim_elements_df.sort_values(by = 'total_points', ascending = False).head(10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
