fixed wrong table name

--- a/squad_optimization/squad_optimizer.ipynb
+++ b/squad_optimization/squad_optimizer.ipynb
@@ -448,7 +448,7 @@
        "      <td>Newcastle</td>\n",
        "      <td>Midfielder</td>\n",
        "      <td></td>\n",
-       "      <td>22.3</td>\n",
+       "      <td>22.4</td>\n",
        "      <td>False</td>\n",
        "      <td>63</td>\n",
        "      <td>...</td>\n",
@@ -514,7 +514,7 @@
        "762                 32.0          True        99  ...           20.404040   \n",
        "527                 67.3          True       142  ...           14.084507   \n",
        "784                 12.4         False        76  ...           23.684211   \n",
-       "603                 22.3         False        63  ...           27.777778   \n",
+       "603                 22.4         False        63  ...           27.777778   \n",
        "23                  22.4          True        61  ...           28.524590   \n",
        "\n",
        "     bonus_percentile  form_percentile  ict_index_percentile  \\\n",
@@ -1126,7 +1126,7 @@
        "      <td>Gordon</td>\n",
        "      <td>Newcastle</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>22.3</td>\n",
+       "      <td>22.4</td>\n",
        "      <td>6.3</td>\n",
        "      <td>175</td>\n",
        "    </tr>\n",
@@ -1197,7 +1197,7 @@
        "8                   3.4          5.5           146  \n",
        "9                  49.7          6.2           224  \n",
        "10                 40.1          8.4           204  \n",
-       "11                 22.3          6.3           175  \n",
+       "11                 22.4          6.3           175  \n",
        "12                 39.8          9.0           221  \n",
        "13                 22.9          7.1           168  \n",
        "14                 67.3         14.2           200  "
@@ -1327,14 +1327,14 @@
     "# Delete already existing tables for these metrics\n",
     "for metric in optimizing_metrics:\n",
     "\n",
-    "    table_name = 'public.optimum_squad_' + metric\n",
+    "    table_name = 'public.optimal_squad_' + metric\n",
     "    drop_query = 'DROP TABLE IF EXISTS ' + table_name\n",
     "    cursor.execute(drop_query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1350,7 @@
        "15"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1367,7 +1367,7 @@
        "15"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1384,7 +1384,7 @@
        "15"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1401,7 +1401,7 @@
        "15"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1418,7 +1418,7 @@
        "15"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1433,7 @@
     "    print(metric)\n",
     "    squad = squad_optimizer(metric, eligible_players)\n",
     "    squad = pd.merge(squad, slim_elements_df[['first_name', 'second_name', 'id']], on=['first_name', 'second_name'], how='left')\n",
-    "    squad.to_sql('optimum_squad_' + metric, engine, schema='public', index=False)\n"
+    "    squad.to_sql('optimal_squad_' + metric, engine, schema='public', index=False)\n"
    ]
   },
   {
